<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_MoveAxisAbsolute" Id="{486fbf74-23de-4ed9-848d-8210f61c6a66}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_MoveAxisAbsolute EXTENDS ST_MsgToPLC:
STRUCT
    axisIndex: DINT;
    position: LREAL;
    speed: LREAL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>